--- a/GroupMeClientAvalonia/GroupMeClientAvalonia.csproj
+++ b/GroupMeClientAvalonia/GroupMeClientAvalonia.csproj
@@ -1,8 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
+    <OutputType>WinExe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <ApplicationIcon />
+    <StartupObject />
   </PropertyGroup>
 
   <ItemGroup>
@@ -17,6 +19,7 @@
 
   <ItemGroup>
     <AvaloniaResource Remove="Views\Controls\AvatarControl.xaml" />
+    <AvaloniaResource Remove="Views\Controls\GroupControl.xaml" />
     <AvaloniaResource Remove="Views\Controls\InlineReadSentMarkerControl.xaml" />
     <AvaloniaResource Remove="Views\Controls\InlineTimestampControl.xaml" />
     <AvaloniaResource Remove="Views\Controls\MultiLikeControl.xaml" />
@@ -24,6 +27,7 @@
 
   <ItemGroup>
     <None Remove="Views\Controls\AvatarControl.xaml" />
+    <None Remove="Views\Controls\GroupControl.xaml" />
     <None Remove="Views\Controls\InlineReadSentMarkerControl.xaml" />
     <None Remove="Views\Controls\InlineTimestampControl.xaml" />
     <None Remove="Views\Controls\MultiLikeControl.xaml" />
@@ -32,7 +36,11 @@
   <ItemGroup>
     <PackageReference Include="Avalonia" Version="0.8.3" />
     <PackageReference Include="Avalonia.Desktop" Version="0.8.3" />
+    <PackageReference Include="Avalonia.HtmlRenderer" Version="0.6.1" />
     <PackageReference Include="Avalonia.ReactiveUI" Version="0.8.3" />
+    <PackageReference Include="Avalonia.Xaml.Behaviors" Version="0.8.2" />
+    <PackageReference Include="Avalonia.Xaml.Interactions" Version="0.8.2" />
+    <PackageReference Include="Avalonia.Xaml.Interactivity" Version="0.8.2" />
     <PackageReference Include="DynamicData" Version="6.13.21" />
     <PackageReference Include="GitInfo" Version="2.0.21">
       <PrivateAssets>all</PrivateAssets>
@@ -67,6 +75,12 @@
   
   <ItemGroup>
     <EmbeddedResource Include="Views\Controls\MultiLikeControl.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </EmbeddedResource>
+  </ItemGroup>
+  
+  <ItemGroup>
+    <EmbeddedResource Include="Views\Controls\GroupControl.xaml">
       <Generator>MSBuild:Compile</Generator>
     </EmbeddedResource>
   </ItemGroup>
