Ported Notification Router and additional GroupMe Framework

--- a/GroupMeClientAvalonia/GroupMeClientAvalonia.csproj
+++ b/GroupMeClientAvalonia/GroupMeClientAvalonia.csproj
@@ -92,9 +92,14 @@
   </ItemGroup>
   
   <ItemGroup>
+    <Folder Include="Notifications\Display\WpfToast\" />
+  </ItemGroup>
+  
+  <ItemGroup>
     <EmbeddedResource Include="Views\Controls\GroupContentsControl.xaml">
       <Generator>MSBuild:Compile</Generator>
     </EmbeddedResource>
   </ItemGroup>
+  
  
 </Project>
