--- a/GroupMeClientAvalonia/GroupMeClientAvalonia.csproj
+++ b/GroupMeClientAvalonia/GroupMeClientAvalonia.csproj
@@ -61,8 +61,8 @@
   
   <ItemGroup>
     <PackageReference Include="Avalonia" Version="0.9.1" />
+    <PackageReference Include="Avalonia.Controls.DataGrid" Version="0.9.1" />
     <PackageReference Include="Avalonia.Desktop" Version="0.9.1" />
-    <PackageReference Include="Avalonia.HtmlRenderer" Version="0.6.1" />
     <PackageReference Include="Avalonia.ReactiveUI" Version="0.9.1" />
     <PackageReference Include="Avalonia.Xaml.Behaviors" Version="0.9.0" />
     <PackageReference Include="Avalonia.Xaml.Interactions" Version="0.9.0" />
