--- a/GroupMeClientAvalonia/GroupMeClientAvalonia.csproj
+++ b/GroupMeClientAvalonia/GroupMeClientAvalonia.csproj
@@ -32,6 +32,7 @@
     <AvaloniaResource Remove="Views\Controls\MessageControl.xaml" />
     <AvaloniaResource Remove="Views\Controls\MultiLikeControl.xaml" />
     <AvaloniaResource Remove="Views\Controls\Popup.xaml" />
+    <AvaloniaResource Remove="Views\Controls\SendImageControl.xaml" />
     <AvaloniaResource Remove="Views\Controls\ViewImageControl.xaml" />
     <AvaloniaResource Remove="Views\LoginView.xaml" />
     <AvaloniaResource Remove="Views\SearchView.xaml" />
@@ -53,6 +54,7 @@
     <None Remove="Views\Controls\MessageControl.xaml" />
     <None Remove="Views\Controls\MultiLikeControl.xaml" />
     <None Remove="Views\Controls\Popup.xaml" />
+    <None Remove="Views\Controls\SendImageControl.xaml" />
     <None Remove="Views\Controls\ViewImageControl.xaml" />
     <None Remove="Views\LoginView.xaml" />
     <None Remove="Views\SearchView.xaml" />
@@ -66,6 +68,7 @@
     <PackageReference Include="Avalonia.ReactiveUI" Version="0.9.1" />
     <PackageReference Include="Avalonia.Xaml.Behaviors" Version="0.9.0" />
     <PackageReference Include="Avalonia.Xaml.Interactions" Version="0.9.0" />
+    <PackageReference Include="Avalonia.Xaml.Interactions.Custom" Version="0.9.0" />
     <PackageReference Include="Avalonia.Xaml.Interactivity" Version="0.9.0" />
     <PackageReference Include="DynamicData" Version="6.14.1" />
     <PackageReference Include="GitInfo" Version="2.0.26">
@@ -193,6 +196,12 @@
   
   <ItemGroup>
     <EmbeddedResource Include="Views\SettingsView.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </EmbeddedResource>
+  </ItemGroup>
+  
+  <ItemGroup>
+    <EmbeddedResource Include="Views\Controls\SendImageControl.xaml">
       <Generator>MSBuild:Compile</Generator>
     </EmbeddedResource>
   </ItemGroup>
