--- a/MicroCubeAvalonia/MicroCubeAvalonia.csproj
+++ b/MicroCubeAvalonia/MicroCubeAvalonia.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -23,7 +23,6 @@
   <ItemGroup>
     <PackageReference Include="Avalonia" Version="0.9.1" />
     <PackageReference Include="Avalonia.ReactiveUI" Version="0.9.1" />
-    <PackageReference Include="Avalonia.Xaml.Interactions" Version="0.9.0" />
   </ItemGroup>
 
   <ItemGroup>
