Added support for using the system default color theme on Windows 10

--- a/GroupMeClientAvalonia/GroupMeClientAvalonia.csproj
+++ b/GroupMeClientAvalonia/GroupMeClientAvalonia.csproj
@@ -267,4 +267,9 @@
     </EmbeddedResource>
   </ItemGroup>
   
+  <ItemGroup>
+    <Folder Include="Native\macOS\" />
+    <Folder Include="Native\Linux\" />
+  </ItemGroup>
+  
 </Project>
